major test cleanup